# scindapsus

./: README.md
berman2016non-local/: CMakeLists.txt  README.md
berman2016non-local/src/: CMakeLists.txt  kd_tree.cpp  others.cpp
berman2016non-local/test/: CMakeLists.txt
differential_elastic_image_registration/: CMakeLists.txt
differential_elastic_image_registration/src/: CMakeLists.txt  utils.cpp
geiger2012automatic/: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.hpp
haze_removal/: CMakeLists.txt  README.md
haze_removal/include/: haze_removal.hpp  tools.hpp
haze_removal/src/: .haze_removal.cpp.swp  haze_removal.cpp  tools.cpp
haze_removal/test/: main.cpp
haze_removal_using_dark_channel_prior/: CMakeLists.txt
haze_removal_using_dark_channel_prior/include/: tools.hpp
haze_removal_using_dark_channel_prior/src/: CMakeLists.txt  tools.cpp
haze_removal_using_dark_channel_prior/test/: main.cpp
he2009single/: README.md
he2009single/include/: tools.hpp
he2009single/test/: CMakeLists.txt
medical_image_registration_with_partial_data/: README.md
medical_image_registration_with_partial_data/data/: sag1.tif
medical_image_registration_with_partial_data/test/: main.cpp
non-local_image_dehazing/: README.md
non-local_image_dehazing/include/: kd_tree.hpp  others.hpp  sphere_subdivision.hpp
non-local_image_dehazing/src/: CMakeLists.txt  kd_tree.cpp  others.cpp  sphere_subdivision.cpp
papadimitriou2003loci/: CMakeLists.txt  README.md
periaswamy2006medical/: CMakeLists.txt
piecewise_rigid_scene_flow/: README.md
(+13 files in other folders)
