CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(VESSEL_MATCH)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_SUBDIRECTORY(utils)

FIND_PACKAGE(OpenCV REQUIRED)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(TEST main.cpp)

TARGET_LINK_LIBRARIES(TEST ${OpenCV_LIBS} libutils.so)
